--- a/src/Kayn/Views/Shared/_Layout.cshtml
+++ b/src/Kayn/Views/Shared/_Layout.cshtml
@@ -1,28 +1,51 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var isAuth = User.Identity?.IsAuthenticated;
+    var isDarkTheme = ((string) ViewData["site_theme"] ?? "dark") == "dark";
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - Kayn</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css"/>
+    @if (isDarkTheme)
+    {
+        <link rel="stylesheet" href="~/css/app-dark.css"/>
+    }
+    else
+    {
+        <link rel="stylesheet" href="~/css/app-light.css"/>
+    }
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar @(isDarkTheme ? "navbar-dark" : "navbar-light") navbar-expand-sm navbar-toggleable-sm">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Kayn</a>
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">Kayn</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            <div class="navbar-collapse collapse d-sm-inline-flex">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
+                </ul>
+            </div>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        @if (!isAuth.HasValue || !isAuth.Value)
+                        {
+                            <a class="nav-link" asp-area="" asp-controller="Authentication" asp-action="Login">Login</a>
+                        }
+                        else
+                        {
+                            <a class="nav-link" asp-area="" asp-controller="Authentication" asp-action="Logout">Logout</a>
+                        }
                     </li>
                 </ul>
             </div>
@@ -35,9 +58,9 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2021 - Kayn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+<footer class="footer text-muted mt-lg-5">
+    <div class="container text-center">
+        &copy; 2021 - Kayn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - View on <a target="_blank" href="https://github.com/Kiritsu/Kayn">GitHub</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
