Adds prefix in context and remove privacy page

--- a/src/Kayn/Views/Shared/_Layout.cshtml
+++ b/src/Kayn/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 
 <footer class="footer text-muted mt-lg-5">
     <div class="container text-center">
-        &copy; 2021 - Kayn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> - View on <a target="_blank" href="https://github.com/Kiritsu/Kayn">GitHub</a>
+        &copy; 2021 - Kayn - View it on <a target="_blank" href="https://github.com/Kiritsu/Kayn">GitHub</a>
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
